已确认：Agent 附加文档/领域知识功能没有被删除。此前“本次没有看到”的直接原因是“数据资产服务助手”当时没有有效绑定知识文档，加上前端缺少明确的运行态提示，看起来像知识链路没有执行。 现在已恢复绑定并完成运行态验证： - 绑定文档：   - MDS指标清单整理   - iDS3.0数据指标清单 - 实测检索：sourceCount=2 - 编译知识上下文：约 1500 tokens - 知识技能：4 个 - 日志状态：status=used / used=true - 前端响应元数据现在包含知识来源数、token 数、截断状态，并可显示“已应用 Agent 领域知识”。 核心入口位于 [AgentChatModeHandler.java (line 146)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-chat/src/main/java/com/chatchat/chat/interaction/service/handler/AgentChatModeHandler.java:146)，知识运行信息定义在 [KnowledgeContext.java (line 14)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-common/src/main/java/com/chatchat/common/knowledge/KnowledgeContext.java:14)。 本轮同时修复了几个确定属于系统自身的问题： - 修复企业元数据检索参数别名冲突，统一到 queryTerms。 - 模型生成 95 个检索词时，完整词项仍保留在 queryTerms，兼容字段 query 被安全限制在 512 字符以内，不损失检索覆盖。[EnterpriseMetadataSearchBridge.java (line 79)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/orchestration/retrieval/EnterpriseMetadataSearchBridge.java:79) - 修复质量门无法穿透 MCP 治理封装读取 totalMatched 的问题，避免成功命中 285 条候选后又被误判为 0 条并重复检索。[RetrievalQualityGate.java (line 84)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/runtime/plan/selection/RetrievalQualityGate.java:84) - OpenSearch 请求增加真正的墙钟超时和取消机制，避免底层同步请求无限等待。[OpenSearchMcpSearchService.java (line 1662)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/search/engine/OpenSearchMcpSearchService.java:1662) - OpenSearch 首次失败后进入短暂断路窗口，后续检索直接使用内存目录，不再对几十个词逐个等待 8 秒。[EnterpriseMetadataSearchService.java (line 410)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/metadata/search/EnterpriseMetadataSearchService.java:410) 验证结果： - 企业元数据桥接与质量门组合测试：9/9 通过。 - OpenSearch 超时与断路测试：6/6 通过。 - API 生产包构建成功并已重新部署，文件哈希一致。 - 当前 API PID：20256，8080 正常监听。 - 当前 MCP PID：29200，8090/9091 正常监听。 - MCP 目录稳定为 29 个工